--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <div class="overlay">
         <h1>Donate Today</h1>
         <br />
-        <p style="width: 35%">
+        <p style="width: 45%">
           The government, moreover, has to initiate effective rehabilitation
           programmes to build new homes for those whose homes have been
           destroyed, along with their belongings. Cash relief should be given so
@@ -53,5 +53,110 @@
         <a href="" class="name-highlight">Donate Now</a>
       </div>
     </section>
+    <section>
+      <div class="overlay">
+        <h1>Our Donation Plan</h1>
+        <p style="width: 45%">
+          the government has allocated only Tk 3 lakh in cash, 10 tonnes of rice
+          and a mere 700 packets of dry food for them. This is grossly
+          inadequate and immediate food and cash relief must be significantly
+          increased and given to alleviate the suffering of these people.
+          Another immediate need is repairing the embankments as quickly as
+          possible before further damage is caused by the saline water.
+        </p>
+        <br /><br />
+        <div class="money-flex">
+          <div class="cart div1">
+            <img
+              style="width: 20%"
+              src="css/icons/food.png"
+              alt=""
+            /><br /><br />
+            <h3>Food for a Family</h3>
+            <br /><br />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse
+              ipsam quis facere vel maxime eius, numquam officia error enim eum
+              perferendis.
+            </p>
+          </div>
+          <div class="cart div2">
+            <img
+              style="width: 20%"
+              src="css/icons/shelter.png"
+              alt=""
+            /><br /><br />
+            <h3>shelter for a Family</h3>
+            <br /><br />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse
+              ipsam quis facere vel maxime eius, numquam officia error enim eum
+              perferendis.
+            </p>
+          </div>
+          <div class="cart div3">
+            <img
+              style="width: 20%"
+              src="css/icons/Frame-1.png"
+              alt=""
+            /><br /><br />
+            <h3>Education for a Child</h3>
+            <br /><br />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse
+              ipsam quis facere vel maxime eius, numquam officia error enim eum
+              perferendis.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="half-width">
+        <h1>Urgent steps have to be taken</h1>
+        <br /><br />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat quia
+          cupiditate suscipit perspiciatis tenetur deleniti explicabo optio
+          vitae commodi excepturi ex, sed mollitia dicta pariatur? Praesentium
+          voluptatum quo aperiam dolorum!
+        </p>
+        <br /><br />
+        <a class="name-highlight" href="">Donate Now</a>
+      </div>
+      <div class="half-width">
+        <img src="css/images/donation3.jpg" alt="" />
+      </div>
+    </section>
+    <article>
+      <div class="overlay last-paragraph">
+        <h1>Get My Updates</h1>
+        <br />
+        <p style="width: 35%" ;>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed quae ut
+          maxime voluptas rerum eaque distinctio vel incidunt earum facere?
+        </p>
+        <br /><br />
+        <div class="update money-flex">
+          <div class="">
+            <input type="email" name="" id="" placeholder="Email" />
+            <a href="" class="name-highlight">Subscribe</a>
+          </div>
+        </div>
+      </div>
+    </article>
+    <br /><br /><br />
+    <article>
+      <div class="footer-part overlay">
+        <div>
+          <h3>Be Humble</h3>
+          <br />
+          <footer>
+            <p>Author: Mohammad Al Samiul</p>
+            <p><a href="">alsamiul123@gmail.com</a></p>
+          </footer>
+        </div>
+      </div>
+    </article>
   </body>
 </html>
