--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <article>
       <div class="footer-part overlay">
         <div>
-          <h3>Be Humble</h3>
+          <h3><i>Be Humble</i></h3>
           <br />
           <footer>
             <p>Author: Mohammad Al Samiul</p>
